# surface_interpolator

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: rust.yml
doc/: CurvaBaseBernstein.py  CurvasBezier.py  EjemploDCSuperficies.py  ElevacionDelGrado.py  INTERPOLANTES.py  INTERPOLANTESUPERFICIES.py  decastejau.py
src/: curves.rs  main.rs  surfaces.rs
