[package]
name = "surface_interpolator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
actix-web = { version = "3.3", features = ["rustls"] }
async_once = "0.2.1"
futures = "0.3.19"
lazy_static = "1.4.0"
mongodb = "1.2.5"
serde = { version = "1.0", features = ["derive"] }
