[package]
name = "surface_interpolator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
async_once = "0.2.1"
futures = "0.3"
lazy_static = "1.4.0"
mongodb = "2.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
